--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,31 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta name="description" content="Andrey Kruglik's Portfolio Website" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <!-- <link
+      rel="preload"
+      as="font"
+      crossorigin
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+    /> -->
+
+    <!-- <link
+      rel="preload"
+      as="font"
+      crossorigin
+      href="../src/images/roadrage-owgbd.woff"
+      type="font/woff"
+    />
+
     <link
       rel="preload"
-      as="style"
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-    />
+      as="font"
+      crossorigin
+      href="../src/images/roadrage-owgbd.woff2"
+      type="font/woff2"
+    /> -->
 
     <link
       rel="stylesheet"
@@ -29,34 +45,17 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
-    <link rel="preload" href="../src/images/NeonMe.png" as="image" />
+    <!-- <link rel="preload" href="../src/images/NeonMelowscale.png" as="image" />
+    <link rel=preload as=video href="../src/videos/lowscale1.webm"/> -->
 
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Andrey Kruglik's Portfolio</title>
   </head>
   <body>
-    <script></script>
+    <noscript>Enable your JavaScript!</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
